--- a/Proyecto_Spotify_DS_II.ipynb
+++ b/Proyecto_Spotify_DS_II.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHh+BZm+9XCb0zyyckx1OL",
+      "authorship_tag": "ABX9TyNHIin/POljFPZ8H5QeF4Nx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2159,11 +2159,11 @@
         "print(f\"Dimensiones de testeo: {X_test_scaled.shape}\")"
       ],
       "metadata": {
-        "id": "k3qYmP6Q8kI5",
-        "outputId": "20024fb2-43fd-41bd-8866-81137369748a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "k3qYmP6Q8kI5",
+        "outputId": "20024fb2-43fd-41bd-8866-81137369748a"
       },
       "execution_count": 15,
       "outputs": [
@@ -2225,11 +2225,11 @@
         "print(f\"R2: {r2_rf:.2f}\")"
       ],
       "metadata": {
-        "id": "KfWyStx39tS_",
-        "outputId": "3e20ea5e-ff34-46a8-e6c2-85053ecf73a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KfWyStx39tS_",
+        "outputId": "3e20ea5e-ff34-46a8-e6c2-85053ecf73a1"
       },
       "execution_count": 16,
       "outputs": [
@@ -2288,11 +2288,11 @@
         "print(f\"🚀 R2 del modelo optimizado: {r2_best:.2f}\")"
       ],
       "metadata": {
-        "id": "R1WPskVG91fF",
-        "outputId": "a6dd1025-d222-4d09-cb43-d9cca09c927e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R1WPskVG91fF",
+        "outputId": "a6dd1025-d222-4d09-cb43-d9cca09c927e"
       },
       "execution_count": 17,
       "outputs": [
@@ -2322,6 +2322,9 @@
     {
       "cell_type": "code",
       "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
         "# Extraer importancia de características del mejor modelo\n",
         "importances = best_rf.feature_importances_\n",
         "feature_names = features # Usa la lista ['artist_popularity', 'followers', 'release_year']\n",
@@ -2330,9 +2333,16 @@
         "df_importancia = pd.DataFrame({'Feature': feature_names, 'Importancia': importances})\n",
         "df_importancia = df_importancia.sort_values(by='Importancia', ascending=False)\n",
         "\n",
-        "# Gráfico\n",
+        "# Gráfico (CORREGIDO: Se agregó hue='Feature' y legend=False)\n",
         "plt.figure(figsize=(8, 5))\n",
-        "sns.barplot(x='Importancia', y='Feature', data=df_importancia, palette='viridis')\n",
+        "sns.barplot(\n",
+        "    x='Importancia',\n",
+        "    y='Feature',\n",
+        "    hue='Feature',       # <--- Agregado para arreglar el warning\n",
+        "    data=df_importancia,\n",
+        "    palette='viridis',\n",
+        "    legend=False         # <--- Agregado para evitar leyenda duplicada\n",
+        ")\n",
         "plt.title('Variables más influyentes en la popularidad del track')\n",
         "plt.show()\n",
         "\n",
@@ -2345,26 +2355,15 @@
         "    print(\"A veces, con pocos datos, los modelos simples son muy robustos.\")"
       ],
       "metadata": {
-        "id": "0vLciW8U-Q-l",
-        "outputId": "66c1ddb9-8b3b-46fc-802a-a6b9005e2219",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 650
-        }
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-2043558733.py:11: FutureWarning: \n",
-            "\n",
-            "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
-            "\n",
-            "  sns.barplot(x='Importancia', y='Feature', data=df_importancia, palette='viridis')\n"
-          ]
+          "height": 555
         },
+        "id": "0vLciW8U-Q-l",
+        "outputId": "4ccac63b-7d0e-45d9-ceee-ddbb9351c5b5"
+      },
+      "execution_count": 19,
+      "outputs": [
         {
           "output_type": "display_data",
           "data": {
